--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "body-parser": "^1.4.3",
     "cookie-parser": "^1.3.2",
     "cookie-session": "^1.0.2",
-    "express": "^4.4.5",
-    "lodash": "^2.4.1"
+    "express": "^4.4.5"
   },
   "engines": {
     "node": "0.10.x"
